# website

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: docker-image.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: test.rs
frontend/: Cargo.toml  index.html  index.scss  style.css  style.scss
frontend/src/: lib.rs  main.rs
frontend/src/components/: about.rs  header.rs  home.rs  mod.rs  projects.rs
