[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "../common" }
actix-web    = "4.3"
uuid         = { version = "1.3", features = ["v4"] }
serde        = { version = "1.0", features = ["derive"] }
env_logger   = "0.10"
log          = "0.4"
strum_macros = "0.24"
strum        = { version = "0.24", features = ["derive"] }
derive_more  = "0.99"
