[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web     = "4.3"
actix-web-lab = { version = "0.19", features = ["spa"] }
common        = { path = "../common" }
derive_more   = "0.99"
env_logger    = "0.10"
log           = "0.4"
serde         = { version = "1.0", features = ["derive"] }
strum         = { version = "0.24", features = ["derive"] }
strum_macros  = "0.24"
uuid          = { version = "1.3", features = ["v4"] }
