[package]
name    = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common     = { path = "../common" }
gloo       = "0.8"
serde      = "1.0"
serde_json = "1.0"
yew        = { version = "0.20", features = ["csr"] }
