[package]
name    = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "../common" }
material-yew = { version = "0.3.0", features = ["full"] }
stylist      = { version = "0.13", features = ["yew"] }
yew          = { version = "0.20", features = ["csr"] }
yew-feather  = "1.0"
